--- a/hw3.ipynb
+++ b/hw3.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,6 +80,7 @@
     "    res['Total'] = res[res.columns].sum(axis=1)\n",
     "    for col in res:\n",
     "        res[col]['Total'] = res[col].sum()\n",
+    "    res = res[[col for col in res if col != 'Total'] + ['Total']]\n",
     "    return res\n",
     "\n",
     "def expected_values(contingency_df):\n",
@@ -1389,7 +1390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [
     {
@@ -1414,10 +1415,10 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th>IMDB_Rating</th>\n",
        "      <th>&lt;6.0</th>\n",
-       "      <th>Total</th>\n",
        "      <th>≥6.0</th>\n",
        "      <th>≥7.0</th>\n",
        "      <th>≥8.0</th>\n",
+       "      <th>Total</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Body_Count</th>\n",
@@ -1432,58 +1433,58 @@
        "    <tr>\n",
        "      <th>&lt;20</th>\n",
        "      <td>-3.802469</td>\n",
-       "      <td>5.071541</td>\n",
        "      <td>16.688130</td>\n",
        "      <td>-6.167515</td>\n",
        "      <td>-1.646605</td>\n",
+       "      <td>5.071541</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total</th>\n",
        "      <td>3.239576</td>\n",
-       "      <td>18.231013</td>\n",
        "      <td>6.566671</td>\n",
        "      <td>7.175824</td>\n",
        "      <td>1.248943</td>\n",
+       "      <td>18.231013</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>≥120</th>\n",
        "      <td>-3.347826</td>\n",
-       "      <td>9.798763</td>\n",
        "      <td>-6.381809</td>\n",
        "      <td>19.014811</td>\n",
        "      <td>0.513587</td>\n",
+       "      <td>9.798763</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>≥20</th>\n",
        "      <td>2.153846</td>\n",
-       "      <td>1.461151</td>\n",
        "      <td>-1.450044</td>\n",
        "      <td>-3.964286</td>\n",
        "      <td>4.721635</td>\n",
+       "      <td>1.461151</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>≥50</th>\n",
        "      <td>8.236025</td>\n",
-       "      <td>1.899559</td>\n",
        "      <td>-2.289605</td>\n",
        "      <td>-1.707187</td>\n",
        "      <td>-2.339674</td>\n",
+       "      <td>1.899559</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "IMDB_Rating      <6.0      Total       ≥6.0       ≥7.0      ≥8.0\n",
+       "IMDB_Rating      <6.0       ≥6.0       ≥7.0      ≥8.0      Total\n",
        "Body_Count                                                      \n",
-       "<20         -3.802469   5.071541  16.688130  -6.167515 -1.646605\n",
-       "Total        3.239576  18.231013   6.566671   7.175824  1.248943\n",
-       "≥120        -3.347826   9.798763  -6.381809  19.014811  0.513587\n",
-       "≥20          2.153846   1.461151  -1.450044  -3.964286  4.721635\n",
-       "≥50          8.236025   1.899559  -2.289605  -1.707187 -2.339674"
+       "<20         -3.802469  16.688130  -6.167515 -1.646605   5.071541\n",
+       "Total        3.239576   6.566671   7.175824  1.248943  18.231013\n",
+       "≥120        -3.347826  -6.381809  19.014811  0.513587   9.798763\n",
+       "≥20          2.153846  -1.450044  -3.964286  4.721635   1.461151\n",
+       "≥50          8.236025  -2.289605  -1.707187 -2.339674   1.899559"
       ]
      },
-     "execution_count": 242,
+     "execution_count": 248,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1494,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -1519,11 +1520,11 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th>Year</th>\n",
        "      <th>&lt;1980</th>\n",
-       "      <th>Total</th>\n",
        "      <th>≥1980</th>\n",
        "      <th>≥1990</th>\n",
        "      <th>≥2000</th>\n",
        "      <th>≥2005</th>\n",
+       "      <th>Total</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Body_Count</th>\n",
@@ -1539,63 +1540,63 @@
        "    <tr>\n",
        "      <th>&lt;20</th>\n",
        "      <td>-4.547009</td>\n",
-       "      <td>9.262296</td>\n",
        "      <td>-4.841907</td>\n",
        "      <td>-2.187450</td>\n",
        "      <td>11.667405</td>\n",
        "      <td>9.171256</td>\n",
+       "      <td>9.262296</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Total</th>\n",
        "      <td>12.906996</td>\n",
-       "      <td>39.298444</td>\n",
        "      <td>5.572056</td>\n",
        "      <td>11.545967</td>\n",
        "      <td>6.805703</td>\n",
        "      <td>2.467722</td>\n",
+       "      <td>39.298444</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>≥120</th>\n",
        "      <td>16.454849</td>\n",
-       "      <td>13.407037</td>\n",
        "      <td>-1.772343</td>\n",
        "      <td>-5.797545</td>\n",
        "      <td>5.163880</td>\n",
        "      <td>-0.641805</td>\n",
+       "      <td>13.407037</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>≥20</th>\n",
        "      <td>-3.550296</td>\n",
-       "      <td>14.499397</td>\n",
        "      <td>7.801816</td>\n",
        "      <td>21.489762</td>\n",
        "      <td>-6.064760</td>\n",
        "      <td>-5.177126</td>\n",
+       "      <td>14.499397</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>≥50</th>\n",
        "      <td>4.549451</td>\n",
-       "      <td>2.129715</td>\n",
        "      <td>4.384489</td>\n",
        "      <td>-1.958801</td>\n",
        "      <td>-3.960822</td>\n",
        "      <td>-0.884603</td>\n",
+       "      <td>2.129715</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Year            <1980      Total     ≥1980      ≥1990      ≥2000     ≥2005\n",
+       "Year            <1980     ≥1980      ≥1990      ≥2000     ≥2005      Total\n",
        "Body_Count                                                                \n",
-       "<20         -4.547009   9.262296 -4.841907  -2.187450  11.667405  9.171256\n",
-       "Total       12.906996  39.298444  5.572056  11.545967   6.805703  2.467722\n",
-       "≥120        16.454849  13.407037 -1.772343  -5.797545   5.163880 -0.641805\n",
-       "≥20         -3.550296  14.499397  7.801816  21.489762  -6.064760 -5.177126\n",
-       "≥50          4.549451   2.129715  4.384489  -1.958801  -3.960822 -0.884603"
+       "<20         -4.547009 -4.841907  -2.187450  11.667405  9.171256   9.262296\n",
+       "Total       12.906996  5.572056  11.545967   6.805703  2.467722  39.298444\n",
+       "≥120        16.454849 -1.772343  -5.797545   5.163880 -0.641805  13.407037\n",
+       "≥20         -3.550296  7.801816  21.489762  -6.064760 -5.177126  14.499397\n",
+       "≥50          4.549451  4.384489  -1.958801  -3.960822 -0.884603   2.129715"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 247,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1609,6 +1610,114 @@
    "metadata": {},
    "source": [
     "As we can see, total sum really equals to $\\chi^2$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For table with years and number of bodies we have 12 degrees of freedom. Critical values of $\\chi^2$ with 95% level of confidence is 21.02607 and with 99% level is 26.21697. Our value of $\\chi^2 = 39.298444$ and we have 4360 size of dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2332.7555971427264"
+      ]
+     },
+     "execution_count": 251,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.size / 39.298444 * 21.02607"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 252,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2908.6645059025745"
+      ]
+     },
+     "execution_count": 252,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.size / 39.298444 * 26.21697"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that 2333 numbers of observations will suffice to see the features as associated at 95% confidence level and 2909 will suffice at 99% level"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table with rating and number of bodies has 9 degrees of freedom, its critical values for confidence level 95% and 99% are 16.91898 and 21.66599"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4046.223476446427"
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.size / 18.231013 * 16.91898"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5181.484780906031"
+      ]
+     },
+     "execution_count": 254,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.size / 18.231013 * 21.66599"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that 4047 numbers of observations will suffice to see the features as associated at 95% confidence level and 5182 will suffice at 99% level"
    ]
   }
  ],
