--- a/Text/HW 20.tex
+++ b/Text/HW 20.tex
@@ -466,25 +466,24 @@
 	
 	
 	\section{THE CHOICE OF THE DATASET}
-    
-    
+
     The dataset that is used for the project contains information about  on-screen deaths in movies. There are 545 movies (more then 100 objects) and 8 characteristics including names, so the dataset meets the requirements. 
     
-    The sourse for the data is the thematic web-site \href{http://www.moviebodycounts.com/}{moviebodycounts.com}. This dataset was processed and published on \href{https://figshare.com/articles/On_screen_movie_kill_counts_for_hundreds_of_films/889719}{figshare.com}. It was gathered  in accordance with the \href{http://moviebodycounts.proboards.com/thread/6}{rules}, which are published on the web-site. We took several characteristics for the consideration: the year of the film, MPAA rating (Motion Picture Association of America film rating system), genre or genres, the name of the director, the lenth of the film in minutes,  IMDB rating based on user ratings. The main feature that we consider is the number of on-screen deaths in the movie. 
+    The sourse for the data is the thematic web-site \href{http://www.moviebodycounts.com/}{moviebodycounts.com}. This dataset was processed and published on \href{https://figshare.com/articles/On_screen_movie_kill_counts_for_hundreds_of_films/889719}{figshare.com}. It was gathered  in accordance with the \href{http://moviebodycounts.proboards.com/thread/6}{rules}, which are published on the web-site. We took several characteristics for the consideration: the release year of the film, MPAA rating (Motion Picture Association of America film rating system), genre or genres, the name of the director, the lenth of the film in minutes,  IMDB rating based on user ratings. The main feature that we consider is the number of on-screen deaths in the movie. 
     
-    The analysis of the data may reveal how the ratings depend on the number of deaths, how this  number is changing with the year of the release and so on. Moreover, genre and length of the film combined with the violence on the screen may give the idea of the age ratings. This is a good set for the classification and clustering problems, as the films are grouped on genres, MPAA ratings which are similar inside the groups, but dissimilar between them. 
+    The analysis of the data may reveal how the ratings depend on the number of deaths, how this number relates to the release year and so on. Moreover, genre and length of the film combined with on-screen violence may provide information on age ratings. This is a good set for the classification and clustering problems, as the films are grouped by genres and MPAA ratings. Movies in these groups are similar inside the groups, but dissimilar between them. 
     
-    This study analysis may be the first step to the automation of age rating systems. Moreover it may be helpful in the development of the recommendation systems. And, as watching movies is the common interest of our team, the work with the dataset will inspire us to further conquest in Data Analysis.
+    This analysis may be the first step to the automation of age rating systems. Moreover it may be helpful in the development of recommendation systems. And, as watching movies is the common interest of our team, the work with the dataset will inspire us to further conquest in Data Analysis.
     
     
     \newpage
     
     \section{K-means clustering}
     
- For this part of the task we choose three quantitative features:\textit{ Body\_Count}, the number of on-screen deaths in the movie; \textit{Length\_Minutes}, the length in minutes; \textit{Year}, the year of the release. This choice is restrained as these are the only quantitative features of our dataset. 
+ For this part of the task we choose three quantitative features:\textit{ Body\_Count}, the number of on-screen deaths in the movie; \textit{Length\_Minutes}, the length in minutes; \textit{Year}, the year of the release. These are quantitive features that, by our hypotheses, may be useful in cluster analysis of the dataset.
  
  \subsection{Preprocessing}
- First, we normalize (standardize) the features:
+ First we standardize the dataset. We center by mean and normalize by range:
  
  \footnotesize
  \begin{Verbatim}[commandchars=\\\{\}]
@@ -493,23 +492,23 @@
  \end{Verbatim}
  \normalsize
  
-Before implementing the clustering methods, we visualize data on all possible pairplots. There are no obvious clusters in two-dimensional visualization. 
+Before applying clustering methods, we visualize data on all possible pairplots. There are no obvious clusters in the two-dimensional visualization. 
     \begin{center}
 	\adjustimage{max size={0.85\linewidth}{0.9\paperheight}}{output_8_1.png}
 \end{center}
  
 
 
-    The clusters might follow the categorical feature when it's used together with quantitative features. A categorical attribute with the least amount of variants we have is MPAA rating, that bounds the age restrictions. We color the graphs with accordance to the ratings to see how they divide our data. 
+    Clusters might follow a categorical feature already present in data. A categorical attribute with the least amount of variants we have is the MPAA rating. We color the plots with accordance to the ratings to see how they divide our data. 
                 
 \begin{center}
 	\adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{output_5_1.png}
 \end{center}
      
 
-\subsection{K-means implementation}
+\subsection{K-means application}
 
-The first method we apply to find the clusters is k-means at k=5. So we take random initializations of 5 cluster centers and choose the best by k-means criteria from 10 initializations. The sum of squared distances from points to cluster centers: 13.6126. 
+The first method we apply to find the clusters is k-means at k=5. We take random initializations of 5 cluster centers and choose the best by k-means criteria from 10 initializations. The sum of squared distances from points to cluster centers, the K-means criterion: 13.6126. 
   \footnotesize{  
     \begin{Verbatim}[commandchars=\\\{\}]
     {\color{incolor}In [{\color{incolor}16}]:} 
@@ -521,7 +520,7 @@ The first method we apply to find the clusters is k-means at k=5. So we take ran
     \end{Verbatim}
 } \normalsize
 
-The obtained clusters are following (we visualize them by pairplots). They  don't match to MPAA\_Rating directly, but divide the data into reasonable descriptive categories:
+We visualize the obtained clusters using pairplots. They  don't match to MPAA\_Rating directly, but divide the data into reasonable descriptive categories:
 
     \begin{center}
 	\adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{output_9_2.png}
@@ -529,33 +528,33 @@ The obtained clusters are following (we visualize them by pairplots). They  don'
  
 
 
-We would specially distinguish cluster 1 (orange colored), the old films, which are mostly not long and with small amount of deaths. Cluster 3 (red colored) is not large and depicts the films with the highest number of deaths, they differ in length, but are all relatively the new ones. 
+We would specially distinguish cluster 3 (purple colored), the old films, mostly not long and with small amount of deaths. Cluster 4 (orange colored) is not large and contains movies with the highest number of deaths, they differ in length, and are relatively recent ones. 
 
-Now we take clustering at  k=9 and get a lot of smaller clusters: 
+Now we apply K-means at  k=9 and get a lot of smaller clusters: 
  
     \begin{center}
 	\adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{output_10_2.png}
 \end{center}
 
 
-Some clusters are obviously inherited from the pevious ones: new cluster 7 (the gray one) follows cluster 3 (with the higest deaths rate), the new cluster 3 (red) follows the discussed cluster 1 (with old films) from the previous graphs. Besides these two there are many small clusters at the main body of the films, overlapping on the most graphs without having patent interpretation. We conclude that 9 clusters are too much for this dataset, and 5 clusters better describe the data: the cluster boundaries were more clear and the reasonably interpretable clusters were the same.
+Some clusters are obviously inherited from the pevious ones: new cluster 8 follows cluster 3 with the higest body count, the new cluster 0 follows the discussed cluster 3 (with old films) from the previous plot. Besides these two there are many small clusters at the main body of the films, overlapping on most  pairplots, without potent interpretation. We conclude that 9 clusters are too many for this dataset, and 5 clusters describe the data better: the cluster boundaries are clearer and clusters are reasonably interpretable.
 
 \subsection{Interpretation}
 
-In the rest part of this task we consider the partition with k=5 as it is more reasonable for this dataset. First, we explore, how movies are destributed to clusters, minding their MPAA ratings (the correspondence of the ratings is in application \ref{MPAA}). 
+For the rest of this task we consider the partition with k=5. First we explore how movies are destributed among clusters, minding their MPAA ratings (the correspondence of the ratings is in application \ref{MPAA}). 
 
            
 \begin{center}
 	\adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{output_12_1.png}
 \end{center}
 
-The plot shows the amount of movies of each rating in each cluster. For example we see that 165 R movies are in cluster 4. Clusters 0, 2, 4 aggregate the most part of the movies, mostly with R and PG-13 ratings. That may show that we have mostly adult films in the dataset. That is not a surprise due to considered subject. The number of films at the clusters are: 4 - 233,
+The plot shows the amount of movies of each rating in each cluster. For example we see that 165 R movies are in cluster 2. Clusters 0, 1, 2 aggregate the most part of the movies, mostly with R and PG-13 ratings. That may show that we have mostly adult films in the dataset. That is not a surprise due to considered subject. The number of films at the clusters are: 2 - 233,
 0  -  122,
-2  -  119,
-1  -   55,
-3  -   16.
+1  -  119,
+3  -   55,
+4  -   16.
 
-Next we compare the mean values of the features between the clusters. The following barplot shows the correspondence of number of deaths in clusters, separated by ratings. The height of each bar shows the average body count of movies of a certain rating in a cluster. The vertical black bar represents the spread - the highest point shows the maximum, the lowest point shows the minimum.
+Next we compare the mean values of features between the clusters. The following barplot shows the mean body count per clusters, separated by ratings. The height of each bar shows the average body count of movies of a certain rating in a cluster. The vertical black bar represents the spread - the highest point shows the maximum, the lowest point shows the minimum.
 
 
             
@@ -564,30 +563,30 @@ Next we compare the mean values of the features between the clusters. The follow
 \end{center}
  
 
-It's clear that cluster 3 contains the movies with the highest body count, as was supposed in the cluster interpretation. It contains the PG-13 movie with the highest body count in the dataset (836): \textit{"Lord of the Rings: Return of the King"}. The highest point of the black bars shows this movie. 
+It's clear that cluster 4 contains the movies with the highest body count, as was supposed in the cluster interpretation. It contains the PG-13 movie with the highest body count in the dataset (836): \textit{"Lord of the Rings: Return of the King"}. The highest point of the black bars shows this movie. 
 
 Next we consider the average length of the movies by clusters: 
 \begin{center}
 	\adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{output_14_1.png}
 \end{center}
  
-This plot is not very informative. We can see that clusters 0 and 4 are on avearage the shortest ones. And the movies from the cluster 3 (with highest mount of death) are long on average. 
+This plot is not very informative. We can see that clusters 1 and 2 are on avearage the shortest ones. And the movies from the cluster 4, with highest body count, are long on average. 
 
-Next we consider the year of the movies by cluster and ratings. This plot has the same structure. 
+Next we consider the release years of movies by cluster and ratings.
 
 \begin{center}
 	\adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{output_15_1.png}
 \end{center}
  
-It can be seen that the cluster 1 contains mostly old movies, as was discovered before. Now we can see that these are mostly pre-1980 movies. Cluster 0 contains movies from about  the 90-s.
-And it is interesting that the highest body count movies, captured by cluster 3, are mostly recent - post-2010.
+It can be seen that the cluster 3 contains mostly old movies, as was discovered before. Now we can see that these are mostly pre-1980 movies. Cluster 1 contains movies from about the 90-s.
+And it is interesting that the highest body count movies, captured by cluster 4, are mostly recent - post-2010.
 
 
 
 
 \subsection{Bootstrap}
 
-In this part of the paper we inspect closely two clusters: 0 and 1. As was mentioned, cluster 1 contains mostly old, pre-1980 movies and cluster 0 has movies from about the 90-s.
+In this part of the paper we inspect two clusters: 0 and 1. As was mentioned, cluster 1 contains mostly old, pre-1980 movies and cluster 0 has movies from about the 90-s.
 
 First, we compare the length and the year, and then we focus on our main feature, the body count. From the scatter plot the difference between the clusters can be clearly seen.
             
